samples/_failures_safe/1761530635_7bcb17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ca07980.c: In function ‘main’:
./samples/SAFE/__tmp_7ca07980.c:141:5: error: expected identifier at end of input
  141 |     if (product.
      |     ^~
./samples/SAFE/__tmp_7ca07980.c:141:5: error: expected declaration or statement at end of input
